# HiddenGem

./: .gitignore  AGENTS.md  AKSHARE_INTEGRATION.md  AKSHARE_NETWORK_DIAGNOSIS.md  BACKEND_API_SUMMARY.md  BACKEND_INTEGRATION_ANALYSIS.md  BACKEND_STATUS_SUMMARY.md  CLAUDE.md  DATA_FREQUENCY_AND_T1_ANALYSIS.md  FINRL_VS_QFLIB_COMPARISON.md  FIXES_2025_11_11.md  FRONTEND_BACKEND_INTEGRATION_GUIDE.md  HiddenGem系统实现方案.md  HiddenGem系统设计（High&LowLevel&UseCase）.html  INTELLIGENT_SECTOR_TRAINING_GUIDE.md  LIVE_MONITOR_GUIDE.md  MEMORY_VS_SMALL_MODEL_ANALYSIS.md  MINISHARE_FREQUENCY_TEST_REPORT.md  MINISHARE_MIGRATION.md  PAPER_TRADING_SETUP.md  PORTFOLIO_TRAINING_IMPLEMENTATION.md  QFLIB_INTEGRATION_REPORT.md  QUICKSTART.md  RL_TRAINING_IMPLEMENTATION_COMPLETE.md  THREE_STEPS_COMPLETED.md  TRADINGAGENTS_BACKEND_INTEGRATION_REPORT.md  TRADING_EXECUTION_IMPLEMENTATION.md  TRAINING_SYSTEM_ANALYSIS_REPORT.md  package-lock.json
archive/: .env.example  .gitignore  ALPHA_STRATEGY.md  API.md  ARCHITECTURE_EVOLUTION.md  CLAUDE.md  CONFIDENCE_FIX_FINAL_REPORT.md  CONFIDENCE_FIX_REPORT.md  PRICE_TARGETS_REMOVAL_SUMMARY.md  README.md  SUSPENSION_FIX_REPORT.md  TASKS.md  docker-compose.yml  pyproject.toml  requirements.txt
archive/.claude/: settings.local.json
archive/api/: main.py
archive/config/: agents_config.py  database.py  database_sqlite.py  settings.py
archive/database/: models.py
archive/docs/: LLM_INTEGRATION.md  TUSHARE_ADVANCED_APIS_5120.md  TUSHARE_API_REQUIREMENTS.md  TUSHARE_COMPLETE_API_ANALYSIS.md
archive/scripts/: diagnose_db.py  diagnose_llm.py  init_db.py  init_db_sqlite.py  test_agent_integration.py  test_db_connection.py  test_fundamental_agent.py  (+14 more)
(+748 files in other folders)
